--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "astro": "^2.9.1",
     "solid-js": "^1.7.8",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.1"
   }
 }
