--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/solid-js": "^2.2.0",
-    "@astrojs/tailwind": "^4.0.0",
-    "@astrojs/vercel": "^3.7.4",
-    "astro": "^2.9.1",
-    "solid-js": "^1.7.8",
-    "tailwindcss": "^3.3.3"
+    "@astrojs/solid-js": "^3.0.2",
+    "@astrojs/tailwind": "^5.0.2",
+    "@astrojs/vercel": "^5.0.2",
+    "astro": "^3.3.2",
+    "solid-js": "^1.8.3"
   },
   "devDependencies": {
-    "daisyui": "^3.5.1"
+    "autoprefixer": "^10.4.16",
+    "daisyui": "^3.9.3",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
