--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "^8.0.0",
+    "@astrojs/mdx": "^2.0.1",
     "@astrojs/solid-js": "^3.0.2",
     "@astrojs/tailwind": "^5.0.3",
     "@astrojs/vercel": "^6.0.0",
