--- a/package.json
+++ b/package.json
@@ -10,13 +10,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^8.0.0",
-    "@astrojs/mdx": "^2.0.1",
-    "@astrojs/solid-js": "^3.0.2",
-    "@astrojs/tailwind": "^5.0.3",
-    "@astrojs/vercel": "^6.0.0",
-    "astro": "^4.0.2",
-    "solid-js": "^1.8.3"
+    "@astrojs/cloudflare": "^8.0.2",
+    "@astrojs/mdx": "^2.0.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^6.1.3",
+    "astro": "^4.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
