--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^4.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
     "daisyui": "^3.9.3",
     "postcss": "^8.4.31",
