--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@astrojs/mdx": "^2.0.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.3",
+    "@iconify-json/material-symbols": "^1.1.71",
     "astro": "^4.1.2",
+    "astro-icon": "^1.0.4",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
