--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^6.1.3",
     "@iconify-json/material-symbols": "^1.1.71",
+    "@iconify-json/simple-icons": "^1.1.95",
     "astro": "^4.1.2",
     "astro-icon": "^1.0.4",
     "sharp": "^0.33.1"
